[tool.poetry]
name = "drop_spines"
version = "0.1.0"
description = ""
authors = ["dsjt <toot.daiylfalaiydt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
